@@ -1,3 +1,15 @@
+Fri Jan  5 00:53:34 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * tao/Transport_Connector.cpp:
+        * tao/Strategies/UIOP_Connector.cpp:
+
+          Removed the warning generated if a trailing '/' was not present
+          if the default object key were desired. The '/' separator is
+          required only when an explicit object key is present. See
+          section 13.6.10.1 of CORBA 3.0.3 specification (formal/04-03-01)
+          to note that the slash is part of the object key portion of the
+          corbaloc string.
+
 Thu Jan  4 20:10:38 UTC 2007  Iliyan Jeliazkov  <iliyan@ociweb.com>
 
           This is in addition to the change from "Thu Jan 4 04:11:02 UTC
